fix: elements style conflicts

--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
       list-style-type: none;
       gap: 5px;
     }
-    .link {
+    .dev-link {
       display: block;
       padding: 10px;
       border-radius: 5px;
@@ -22,7 +22,7 @@
       text-transform: uppercase;
       border: 2px solid dodgerblue
     }
-    .link--active {
+    .dev-link--active {
       background-color: dodgerblue;
     }
   </style>
@@ -39,8 +39,8 @@
     </svg>
     
     <ul class="workspace-list">
-      <li><a class="link" href="#ploytary">Дима @ploytary</a></li>
-      <li><a class="link" href="#mrdmitrij">Дима @mrdmitrij</a></li>
+      <li><a class="dev-link" href="#ploytary">Дима @ploytary</a></li>
+      <li><a class="dev-link" href="#mrdmitrij">Дима @mrdmitrij</a></li>
     </ul>
     <div class="dev-container"></div>
   </body>
