feat: add rating component

--- a/src/index.html
+++ b/src/index.html
@@ -36,6 +36,12 @@
         <path id="check-on-background" d="M2 6c0-2.20914 1.79086-4 4-4h12c2.2091 0 4 1.79086 4 4v12c0 2.2091-1.7909 4-4 4H6c-2.20914 0-4-1.7909-4-4V6Z"/>
         <path id="check-on-tick" fill-rule="evenodd" d="M18.4942 7.28025c.3975.38336.4091 1.01642.0257 1.41398L11.577 15.8942c-.1898.1969-.452.3074-.7254.3059-.2735-.0016-.5344-.115-.722-.314l-3.85714-4.0909c-.37888-.4018-.36026-1.0347.04158-1.4136.40183-.3789 1.03472-.3603 1.4136.0416l3.13766 3.3278 6.2149-6.44504c.3834-.39756 1.0164-.40907 1.414-.02571Z" clip-rule="evenodd"/>
       </symbol>
+      <symbol id="star-filled" width="12" height="12">
+        <path d="m6.36 9.34 3.4 2.16-.9-4.07 3-2.74-3.96-.36L6.36.5 4.8 4.33.86 4.7l3 2.74-.9 4.07 3.4-2.16Z"/>
+      </symbol>
+      <symbol id="star-empty" width="12" height="12">
+        <path fill-rule="evenodd" d="M6.44 5.2 5.5 2.88l-.84 2.34-2.48.21L3.95 7.1 3.5 9.57l2-1.31 2.07 1.31-.55-2.48 1.83-1.67-2.4-.21Zm.6-.86 3.96.35-3 2.74.9 4.07-3.4-2.16-3.4 2.16.9-4.07-3-2.74 3.95-.35L5.5.5l1.55 3.84Z" clip-rule="evenodd"/>
+      </symbol>
     </svg>
     
     <ul class="workspace-list">
