--- a/src/index.html
+++ b/src/index.html
@@ -42,6 +42,20 @@
       <symbol id="star-empty" width="12" height="12">
         <path fill-rule="evenodd" d="M6.44 5.2 5.5 2.88l-.84 2.34-2.48.21L3.95 7.1 3.5 9.57l2-1.31 2.07 1.31-.55-2.48 1.83-1.67-2.4-.21Zm.6-.86 3.96.35-3 2.74.9 4.07-3.4-2.16-3.4 2.16.9-4.07-3-2.74 3.95-.35L5.5.5l1.55 3.84Z" clip-rule="evenodd"/>
       </symbol>
+      <symbol id="cart-icon" width="24" height="24" >
+        <g fill="#1D996E" fill-rule="evenodd" clip-path="url(#a)" clip-rule="evenodd">
+          <path d="M7 21a2 2 0 1 1 4 0 2 2 0 0 1-4 0ZM18 21a2 2 0 1 1 4 0 2 2 0 0 1-4 0ZM0 1a1 1 0 0 1 1-1h4a1 1 0 0 1 .98.8L6.82 5H23a1 1 0 0 1 .98 1.19l-1.6 8.4A3 3 0 0 1 19.4 17H9.7a3 3 0 0 1-3-2.41L5.04 6.24A1 1 0 0 1 5 6.16L4.18 2H1a1 1 0 0 1-1-1Zm7.22 6 1.44 7.2a1 1 0 0 0 1 .8h9.76a1 1 0 0 0 1-.8L21.79 7H7.22Z"/>
+        </g>
+        <defs>
+          <clipPath id="a">
+            <path fill="#fff" d="M0 0h24v24H0z"/>
+          </clipPath>
+        </defs>
+      </symbol>
+      <symbol id="search-icon" width="24" height="24">
+        <path fill="#1D996E" fill-rule="evenodd" d="M11 4a7 7 0 1 0 0 14 7 7 0 0 0 0-14Zm-9 7a9 9 0 1 1 18 0 9 9 0 0 1-18 0Z" clip-rule="evenodd"/>
+        <path fill="#1D996E" fill-rule="evenodd" d="M15.94 15.94a1 1 0 0 1 1.42 0l4.35 4.35a1 1 0 0 1-1.42 1.42l-4.35-4.35a1 1 0 0 1 0-1.42Z" clip-rule="evenodd"/>  
+      </symbol>
     </svg>
     
     <ul class="workspace-list">
